# SoundSynthesis

./: .gitignore  CMakeLists.txt
src/: main.cpp  midi.cpp  midi.hpp  midi_reader.cpp  midi_reader.hpp  midi_track.hpp  pcm.hpp  wav_header.hpp
tests/: CMakeLists.txt  midi_tests.cpp
